# synaptiq

./: README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260101000000_init.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs
backend/src/db/: bootstrap.rs  mod.rs
backend/src/handlers/: agents.rs  chat.rs  conversations.rs  knowledge.rs  mod.rs
backend/src/seed/: mod.rs
frontend/: .env.local.example  Dockerfile  next.config.js  package.json  tsconfig.json
frontend/src/components/layout/: AppLayout.module.css  AppLayout.tsx
frontend/src/lib/: api.ts  errorReporter.ts
frontend/src/pages/: _app.tsx  conversations.tsx  index.tsx  knowledge.tsx  settings.tsx
frontend/src/pages/agents/: builder.tsx  index.tsx
frontend/src/styles/: Agents.module.css  Builder.module.css  Chat.module.css  Conversations.module.css  Knowledge.module.css  Settings.module.css  globals.css
frontend/src/theme/: theme.ts
